--- a/index.html
+++ b/index.html
@@ -1,35 +1,70 @@
 <!DOCTYPE html>
 <html ng-app="myApp">
 <head>
-<script src="https://code.jquery.com/jquery.min.js"></script>
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
+    <!--Import Google Icon Font-->
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-<!-- Add ui-router library here -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
-<script src="js/app.js"></script>
-<link href = "css/app.css" rel="stylesheet" type = "text/css"/>
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+  <!--Libraries-->
+  <script src="https://code.jquery.com/jquery.min.js"></script>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
+
+  <!-- Add ui-router library here -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
+
+  <!--Custom Codes -->
+  <script src="js/app.js"></script>
+  <link href = "css/app.css" rel="stylesheet" type = "text/css"/>
   <meta charset="utf-8">
-  <title>Multipage Example</title>
-</head>
-<body>
-  <div class="container">
-    <div class="header">
-        <h1>This is the header -- it'll stick around</h1>        
-        <a class="btn btn-default" ui-sref="home" >Home</a>
-        <a class="btn btn-default" ui-sref="content" >Content</a>
-        <a class="btn btn-default" ui-sref="about" >About</a>
-		</div>
 
-      </div>
+  <!--Title + Iccon-->
+  <title>Royce Le's Portfolio</title>
+  <link rel="icon" href="img/icon.jpg">
+</head>
+
+<body>
+  <!--Import jQuery before materialize.js-->
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="js/materialize.min.js"></script>
+
+ <!--Navbar is here -->
+  <div id="wrapper">
+    <div class="container-fluid">
+      <div class="header">
+          <nav class="navbar navbar-default navbar-fixed-top" id="navbar">
+            <li class="col-xs-3">
+              <a ui-sref="home">Home</a>
+            </li>
+            <li class="col-xs-3">
+              <a ui-sref="projects">Projects</a>
+            </li>
+            <li class="col-xs-3">
+              <a ui-sref="achievements">Achievements</a>
+            </li>
+            <li class="col-xs-3">
+              <a ui-sref="about">About</a>
+            </li>
+          </nav>
+  		</div>
     </div>
-    <div class="container">
+
+    <!--Content of the different pages gets displayed here-->
+    <div class="container content">
       <div ui-view></div>
     </div>
+
+    <!--Footer goes here-->
     <div class="footer">
-        <h2>(This is the footer -- it'll stick around too)</h2>
+      <footer class="page-footer blue-grey">
+          &copy;Copyright 2015 . Royce Le
+      </footer>
     </div>
   </div>
 </body>
