--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
       <div class="header">
           <nav class="navbar navbar-default navbar-fixed-top" id="navbar">
             <li class="col-xs-3">
-              <a ui-sref="home">Home</a>
+              <h4><a ui-sref="home">Home</a></h4>
             </li>
             <li class="col-xs-3">
-              <a ui-sref="projects">Projects</a>
+              <h4><a ui-sref="projects">Projects</a></h4>
             </li>
             <li class="col-xs-3">
-              <a ui-sref="achievements">Achievements</a>
+              <h4><a ui-sref="achievements">Achievements</a></h4>
             </li>
             <li class="col-xs-3">
-              <a ui-sref="about">About</a>
+              <h4><a ui-sref="about">About</a></h4>
             </li>
           </nav>
   		</div>
